--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Tak Hur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,9 +33,11 @@
 							<li><a href="monthly_tak.html">Monthly Tak</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://twitter.com/takh0404" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://github.com/takh04" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://scholar.google.com/citations?user=xmXOhusAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google</span></a></li>
+							<li><a href="https://github.com/takh04" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/takh0404" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/tak-hur-956042188/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+
 						</ul>
 					</nav> 
 
