--- a/QCNN.html
+++ b/QCNN.html
@@ -21,7 +21,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="monthly_tak.html">Monthly Tak</a></li>
+							<!--
+								Include if you want monthly tak section
+								<li><a href="monthly_tak.html">Monthly Tak</a></li>
+							-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://scholar.google.com/citations?user=xmXOhusAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google</span></a></li>
@@ -43,6 +46,11 @@
 									The detailed papers can be found here and here. The code can be found here.<br />
 									Quantum convolutional neural networks ...</p>
 								</header>
+								<figure>
+									<img src="images/pic01.jpg" alt="QCNN" width="460" height="345">
+									<img src="images/pic01.jpg" alt="QCNN" width="460" height="345">
+									<figcaption>[1] QCNN architecture</figcaption>
+								</figure>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
