--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="CV.html">CV</a></li>
+							<!--
+								Include if you want Monthly Tak session
 							<li><a href="monthly_tak.html">Monthly Tak</a></li>
+							-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://scholar.google.com/citations?user=xmXOhusAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google</span></a></li>
 							<li><a href="https://github.com/takh04" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/takh0404" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/tak-hur-956042188/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-
 						</ul>
 					</nav> 
 
@@ -49,9 +52,23 @@
 								<header class="major">
 									<!-- <div> <span class="date">April 25, 2017</span></div> -->
 									<h2>About Me</h2>
-									<p>Introduction about me.</p>
+									<div align="left">
+									<p style="font-size: 200spx"><font face='Sans-serif'>
+										Hi 👋, my name is Tak. I am a Physics and Quantum Computing enthusiast. I have previously studied Physics at Imperial College London. Now I am part of <a href="https://quantumpark.yonsei.ac.kr">q-DNA</a> lab (Yonsei University, Korea), where I am studying quantum machine learning as a junior researcher. I am planning to share some of my works and thoughts through this blog. If you are interested have a look! And feel free to reach out if you have any questions, suggestions, or comments!
+									</font></p>
+									<p style="font-size: 200spx"><font face='Sans-serif'>
+										These are a high-level overview of my main research interests. <br>
+										1. Theoretical Quantum Machine Learning <br>
+										Quantum machine learning studies how well quantum computers learn from data and make useful predictions or decisions. I am interested in quantum computers’ power for machine learning tasks: from how parameterised quantum circuits (PQC) can be optimised from the given training data (optimisation) to how well can trained models be generalised to previously unseen data (generalisation).<br>
+										2. Quantum Machine Learning Applications <br>
+										I love applying quantum machine learning to real-world datasets (both classical and quantum data). I believe quantum computers are powerful tools to study physical sciences (condensed matter physics, quantum chemistry, quantum biophysics etc.) as it naturally uses the power of quantum physics for computation. 
+									</font></p>
+									</div>
 								</header>
+								<!--
+								Add image
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								-->
 
 								<!-- <div><ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
@@ -65,8 +82,9 @@
 										<span class="date">June 11, 2022</span>
 										<h2>Quantum Convolutional Neural Networks</h2>
 									</header>
-									<a class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>About Quantum convolutional neural networks.</p>
+									
+									<a class="image fit"><img src="images/QCNN.png" alt="" /></a>
+									<p>About Quantum Convolutional Neural Networks (QCNN)</p>
 									<ul class="actions special">
 										<li><a href="QCNN.html" class="button">Full Story</a></li>
 									</ul>
@@ -76,11 +94,10 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2>Quantum Kernel Optimization via Deep Learning</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>About Quatum Kernel Optimization</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
