--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>About Quatum Kernel Optimization</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="result_plot.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 						
