--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<a class="image fit"><img src="images/QCNN.png" alt="" /></a>
 									<p>We investigate the performance of various QCNN models differentiated by structures of parameterized quantum circuits, quantum data encoding methods, classical data pre-processing methods, cost functions and optimizers on MNIST and Fashion MNIST datasets. </p>
 									<ul class="actions special">
-										<li><a href="Untitled-2.html" class="button">Full Story</a></li>
+										<li><a href="QCNN_tutorial.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 						
