--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										performance outcomes. Here, we present Neural Quantum Embedding (NQE), a method that efficiently
 										optimizes quantum embedding by leveraging classical deep learning techniques.</p>
 									<ul class="actions special">
-										<li><a href="NQE.html" class="button">Full Story</a></li>
+										<li><a href="NQE_tutorial.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 						
