--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 										<span class="date">Nov, 2024</span>
 										<h2>Quantum Margin Generalization</h2>
 									</header>
-									<a class="image fit"><img src="tutorials/qmargin.png" alt="Placeholder image" style="width:60%; height:auto; margin:0 auto;" /></a>
-									<p>Stay tuned! A detailed tutorial on Quantum Margin Generalization is on its way.</p>
+									<a class="image fit"><img src="tutorials/qmargin.png" alt="" /></a>
+									<p>Recent studies have revealed shortcomings in current generalization theories, particularly those relying on uniform bounds, across both classical and quantum settings. In this work, we present a margin-based generalization bound for QML models, providing a more reliable framework for evaluating generalization. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button disabled">Coming&nbsp;Soon</a></li>
+										<li><a href="tutorials/qmargin.html" class="button">Full Demo</a></li>
 									</ul>
 								</article>
 						
