--- a/tutorials/nqe-dqc1.html
+++ b/tutorials/nqe-dqc1.html
@@ -143,7 +143,7 @@ window.Quarto = {
 </header>
 
 
-<p>This tutorial demonstrates the implementation of neural quantum embedding (NQE) using deterministic quantum computation with one clean qubit (DQC1). More experimental results for NQE-DQC1, including real-hardware experiments on NMR device, can be found in <a href="https://arxiv.org/abs/2501.15359">this paper[1]</a>. If you want to know more about NQE read the <a href="https://arxiv.org/abs/2311.11412%5B2%5D">original paper</a> or follow the <a href="https://takh04.github.io/nqe.html">introductory tutorial</a>. If you need more information about DQC1 protocal, have a look at this <a href="https://en.wikipedia.org/wiki/One_clean_qubit">introduction</a>.</p>
+<p>This tutorial demonstrates the implementation of neural quantum embedding (NQE) using deterministic quantum computation with one clean qubit (DQC1). More experimental results for NQE-DQC1, including real-hardware experiments on NMR device, can be found in <a href="https://arxiv.org/abs/2501.15359">this paper[1]</a>. If you want to know more about NQE read the <a href="https://arxiv.org/abs/2311.11412">original paper[2]</a> or follow the <a href="https://takh04.github.io/nqe.html">introductory tutorial</a>. If you need more information about DQC1 protocal, have a look at this <a href="https://en.wikipedia.org/wiki/One_clean_qubit">introduction</a>.</p>
 <p>This tutorial was tested under following environments:</p>
 <pre><code>python=3.10
 pennylane==0.27.0
@@ -490,8 +490,8 @@ Accuracy with NQE: 98.000</code></pre>
 <section id="references" class="level3">
 <h3 class="anchored" data-anchor-id="references">References</h3>
 <ol type="1">
-<li>Tak Hur, Israel F. Araujo, Daniel K. Park. <em>Neural Quantum Embedding: Pushing the Limits of Quantum Supervised Learning</em>. Physical Review A (2024).</li>
-<li>Hongfeng Liu, Tak Hur, Shitao Zhang. <em>Neural quantum embedding via deterministic quantum computation with one qubit</em>. arXiv.2501.15359</li>
+<li><p>Hongfeng Liu, Tak Hur, Shitao Zhang. <em>Neural quantum embedding via deterministic quantum computation with one qubit</em>. arXiv.2501.15359</p></li>
+<li><p>Tak Hur, Israel F. Araujo, Daniel K. Park. <em>Neural Quantum Embedding: Pushing the Limits of Quantum Supervised Learning</em>. Physical Review A (2024).</p></li>
 </ol>
 </section>
 <section id="citation" class="level3">
